--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,3 +16,13 @@ stages:
     outs:
     - data/processed/test_Microsoft_Stock.csv
     - data/processed/train_Microsoft_Stock.csv
+  train_and_evaluate:
+    cmd: python src/train_and_evaluate.py --config=params.yaml
+    deps:
+    - data/processed/test_Microsoft_Stock.csv
+    - data/processed/train_Microsoft_Stock.csv
+    - src/train_and_evaluate.py
+    params:
+    - 
+    outs:
+    - saved_model/stock_model.joblib
