--- a/params.yaml
+++ b/params.yaml
@@ -15,6 +15,8 @@ split_data:
   test_size: 0.8
 
 estimators:
-  LinearRegression
+  model:
+    epoch: 50
+    learning_rate = 0.01
 
-model_dir: saved_model
+model_dir: saved_model/model.pth
