--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ envlist = py312
 
 [testenv]
 deps = 
-    pip>=23.1
-    setuptools>=67
-    -r requirements.txt
+    -rrequirements.txt
 commands=
+    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     pytest -v
